# bonfire

./: .gitignore  README.md
.github/: social-preview.md
ele/: index.html  installer.nsh  main.js  optimize-package-fixed.js  optimize-package.js  package-lock.json  package-small.js  package.json  preload.js  reduce-size.js  renderer.js  styles.css
gui_app/: Cargo.toml
gui_app/src/: main.rs
simple_slint_app/: Cargo.toml
simple_slint_app/src/: main.rs
simple_slint_app/ui/: hello.slint
